# rust-firebase

./: Cargo.toml
